# DRDO-AVR-ml-prediction

./: .gitignore  README.md  avr_phm_walkthrough.md  bugs.md  concerns.md  final notes.md  hardware.md  master plan.md  pipeline_review.md
avr_phm/: .env  Interactive_Results_Dashboard.ipynb  README.md  __init__.py  inspect_lr_schedule.py  pyproject.toml  requirements.txt  run_digitaltwin_experiment.py  run_heavy_sweep.py  run_ipinn_experiment.py  run_publication.py  run_rl_experiment.py  setup.py
avr_phm/.ipynb_checkpoints/: Interactive_Results_Dashboard-checkpoint.ipynb
avr_phm/config/: __init__.py  milstd.yaml  model.yaml  paths.yaml  scenarios.yaml
avr_phm/data/raw/: avr_data_arctic_cold_run1.csv  avr_data_artillery_firing_run1.csv  avr_data_desert_heat_run1.csv  avr_data_desert_heat_run2.csv  (+20 more)
avr_phm/data_gen/: __init__.py  cgan.py  pipeline.py  vva.py
avr_phm/eval/: __init__.py  adversarial.py  calibration.py  phm_metrics.py  xai.py
avr_phm/experiments/: __init__.py  ablation.py  evaluate.py  figures.py  train.py
avr_phm/features/: __init__.py  engineer.py
avr_phm/future_work/: train_ppo_agent.py
avr_phm/models/: __init__.py  baseline_cnn.py  baseline_lstm.py  baseline_rf.py  baseline_threshold.py  patchtst.py  pinn.py  recurrent_ae.py  tier_1_concepts.py
avr_phm/notebooks/: avr_phm_research_demo.py
avr_phm/simulator/: __init__.py  constants.py  dae_model.py  fault_mechanisms.py  mil_std_1275e.py  mil_std_810h.py  scenario_engine.py  validator.py
avr_phm/tests/: test_features.py  test_metrics.py  test_models.py  test_simulator.py
(+51 files in other folders)
